--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -28,7 +28,7 @@ jobs:
         aws-secret-access-key: ${{secrets.AWS_SECRET_ACCESS_KEY}}
         aws-region: us-east-1
         
-    - name: Install dependencies
+    - name: Install Test dependencies
       run: |
         python -m pip install --upgrade pip
         pip install flake8 pytest
@@ -46,6 +46,10 @@ jobs:
       run: |
         pytest -v tests --cov --cov-report=xml --cov-report=html
     
+    - name: Install local app dependencies
+      run: |
+        if [ -f requirements.txt ]; then pip install -r requirements.txt -t .; fi
+          
     - name: Delete unnecessary build files
       run: | 
         rm -rf .pytest_cache
